--- a/package.json
+++ b/package.json
@@ -12,20 +12,20 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.157",
-    "@types/node": "22.7.4",
+    "@types/node": "^22.7.4",
     "aws-cdk": "2.1027.0",
     "esbuild": "^0.24.0",
     "ts-node": "^10.9.2",
-    "typescript": "~5.6.2",
+    "typescript": "^5.9.3",
     "typescript-json-schema": "^0.65.1"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.658.1",
-    "@aws-sdk/lib-dynamodb": "^3.658.1",
-    "@aws-sdk/util-dynamodb": "^3.658.1",
+    "@aws-sdk/client-dynamodb": "^3.926.0",
+    "@aws-sdk/lib-dynamodb": "^3.926.0",
+    "@aws-sdk/util-dynamodb": "^3.926.0",
     "ajv": "^8.17.1",
-    "aws-cdk-lib": "2.213.0",
-    "constructs": "^10.3.0",
+    "aws-cdk-lib": "^2.213.0",
+    "constructs": "^10.4.3",
     "source-map-support": "^0.5.21"
   }
 }
