--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "typescript-json-schema": "^0.65.1"
   },
   "dependencies": {
-    "@aws-sdk/client-dynamodb": "^3.926.0",
-    "@aws-sdk/lib-dynamodb": "^3.926.0",
+    "@aws-sdk/client-cognito-identity-provider": "^3.927.0",
+    "@aws-sdk/client-dynamodb": "^3.927.0",
+    "@aws-sdk/lib-dynamodb": "^3.927.0",
     "@aws-sdk/util-dynamodb": "^3.926.0",
     "ajv": "^8.17.1",
     "aws-cdk-lib": "^2.213.0",
